[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Template/Template_allies.gd" type="Script" id=1]
[ext_resource path="res://Assets/Borders/Card_Background.png" type="Texture" id=2]

[sub_resource type="Shader" id=1]
code = "//shader_type canvas_item;
//void fragment(){
//	COLOR=texture(TEXTURE,UV);
//	if(COLOR.a>0.5){
//		COLOR.a=1.0;
//	}else{
//		COLOR.a=0.0
//	}
//}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Entity" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 350.0
script = ExtResource( 1 )

[node name="Entity_Sprite" type="Sprite" parent="."]
centered = false

[node name="Bars" type="VBoxContainer" parent="."]
margin_right = 250.0
margin_bottom = 350.0

[node name="Top_Gap" type="MarginContainer" parent="Bars"]
margin_right = 250.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="Top_Bar" type="HBoxContainer" parent="Bars"]
margin_top = 29.0
margin_right = 250.0
margin_bottom = 43.0

[node name="Left_Gap" type="MarginContainer" parent="Bars/Top_Bar"]
margin_right = 25.0
margin_bottom = 14.0
rect_min_size = Vector2( 25, 0 )

[node name="Name" type="MarginContainer" parent="Bars/Top_Bar"]
margin_left = 29.0
margin_right = 55.0
margin_bottom = 14.0

[node name="BackGround" type="NinePatchRect" parent="Bars/Top_Bar/Name"]
margin_right = 26.0
margin_bottom = 14.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 69, 32 )

[node name="CenterContainer" type="CenterContainer" parent="Bars/Top_Bar/Name"]
margin_right = 26.0
margin_bottom = 14.0

[node name="Blood" type="Label" parent="Bars/Top_Bar/Name/CenterContainer"]
material = SubResource( 2 )
margin_right = 26.0
margin_bottom = 14.0
text = "Null"

[node name="Hover_Checker" type="TextureButton" parent="."]
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 125, 175 )

[connection signal="mouse_entered" from="Hover_Checker" to="." method="_on_Hover_Checker_mouse_entered"]
[connection signal="mouse_exited" from="Hover_Checker" to="." method="_on_Hover_Checker_mouse_exited"]
